@@ -54,14 +54,68 @@ sections of the archive.
 
 </para>
 
+    <sect4 id="apt-setup-cdset">
+    <title>Installing from more than one CD or DVD</title>
+
+<para>
+
+If you are installing from a CD or a DVD that is part of a larger set,
+the installer will ask if you want to scan additional CDs or DVDs.
+If you have additional CDs or DVDs available, you probably want to do
+this so the installer can use the packages included on them.
+
+</para><para>
+
+If you do not have any additional CDs or DVDs, that is no problem: using
+them is not required. If you also do not use a network mirror (as explained
+in the next section), it can mean that not all packages belonging to the
+tasks you select in the next step of the installation can be installed.
+
+</para>
+<note><para>
+
+Packages are included on CDs (and DVDs) in the order of their popularity.
+This means that for most uses only the first CDs in a set are needed and
+that only very few people actually use any of the packages included on the
+last CDs in a set.
+
+</para><para>
+
+It also means that buying or downloading and burning a full CD set is just
+a waste of money as you'll never use most of them. In most cases you are
+better off getting only the first 3 to 8 CDs and installing any additional
+packages you may need from the Internet by using a mirror.
+The same goes for DVD sets: the first DVD, or maybe the first two DVDs
+will cover most needs.
+
+</para><para>
+
+A good rule of thumb is that for a regular desktop installation (using the
+GNOME desktop environment) only the first three CDs are needed. For the
+alternative desktop environments (KDE or Xfce), additional CDs are needed.
+The first DVD easily covers all three desktop environments.
+
+</para></note>
+<para>
+
+If you do scan multiple CDs or DVDs, the installer will prompt you to
+exchange them when it needs packages from another CD/DVD than the one
+currently in the drive. Note that only CDs or DVDs that belong to the
+same set should be scanned. The order in which they are scanned does not
+really matter, but scanning them in ascending order will reduce the chance
+of mistakes.
+
+</para>
+    </sect4>
+
     <sect4 id="apt-setup-mirror">
     <title>Using a network mirror</title>
 
 <para>
 
-One question that will be asked in most cases is whether or not to use a
-network mirror as a source for packages. In most cases the default answer
-should be fine, but there are some exceptions.
+One question that will be asked during most installs is whether or not to
+use a network mirror as a source for packages. In most cases the default
+answer should be fine, but there are some exceptions.
 
 </para><para>
 
@@ -74,81 +128,68 @@ installation.
 
 </para><para>
 
-If you are installing from a full CD or using a CD image (not DVD), using a
-network mirror is not required, but is still strongly recommended because a
-single CD contains only a fairly limited number of packages. The installer
-currently does not support using multiple CD or DVD images during the
-installation<footnote>
-
-<para>
-Adding that option is planned.
-</para>
-
-</footnote>. If you have a limited Internet connection it may still be best
+If you are installing from a single full CD or using a full CD image, using
+a network mirror is not required, but is still strongly recommended because
+a single CD contains only a fairly limited number of packages.
+If you have a limited Internet connection it may still be best
 to <emphasis>not</emphasis> select a network mirror here, but to finish the
-installation using only what's available on the CD and install additional
-packages after the installation (i.e. after you have rebooted into the new
-system).
+installation using only what's available on the CD and selectively install
+additional packages after the installation (i.e. after you have rebooted into
+the new system).
 
 </para><para>
 
-If you are installing from a DVD or using a DVD image, the need to use a
-network mirror is a lot smaller, but there is still a chance that some
-packages that are part of the tasks you select in the next step will not
-be included on the first DVD. This is especially true if you are installing
-in another language than English: a number of font and localization packages
-are known to be on the second DVD. So, if you have a reasonable Internet
-connection it is still advisable to use a network mirror.
+If you are installing from a DVD or using a DVD image, any packages needed
+during the installation should be present on the first DVD. The same is true
+if you have scanned multiple CDs as explained in the previous section. Use
+of a network mirror is optional.
 
 </para><para>
 
-<!-- This should probably be documented a bit more extensively in
-     post-install instead. -->
-To install additional packages after the installation you have two options:
-
-<orderedlist>
-<listitem><para>
-
-if you have additional CD/DVD images available (from same set as the
-installation CD/DVD you are using), you can add those to the
-<filename>sources.list</filename> using <command>apt-cdrom</command>;
-
-</para></listitem>
-<listitem><para>
-
-manually add a mirror to the <filename>sources.list</filename> using an
-editor.
-
-</para></listitem>
-</orderedlist>
-
-You can then use one of the package management front-ends to select and
-install additional packages<footnote>
-
-<para>
-It is possible to add both additional CDs or DVDs <emphasis>and</emphasis>
-a network mirror in <filename>/etc/apt/sources.list</filename>. Also adding
-a network mirror has the advantage that it will make updates of packages in
-point releases of the distribution available for installation.
-</para>
-
-</footnote>.
+One advantage of adding a network mirror is that updates that have occurred
+since the CD/DVD set was created and have been included in a point release,
+will become available for installation, thus extending the life of your CD/DVD
+set without compromising the security or stability of the installed system.
 
 </para><para>
 
 In summary: selecting a network mirror is generally a good idea, except
 if you do not have a good Internet connection. If the current version of
-a package is available on the CD/DVD, the installer will always use that.
+a package is available from CD/DVD, the installer will always use that.
 The amount of data that will be downloaded if you do select a mirror thus
-depends on a) the tasks you select in the next step of the installation, b)
-which packages are needed for those tasks, and c) which of those packages
-are present on the CD/DVD.
+depends on
+
+<orderedlist>
+<listitem><para>
+
+the tasks you select in the next step of the installation,
+
+</para></listitem>
+<listitem><para>
+
+which packages are needed for those tasks,
+
+</para></listitem>
+<listitem><para>
+ 
+which of those packages are present on the CDs or DVDs you have scanned, and
+
+</para></listitem>
+<listitem><para>
+
+whether any updated versions of packages included on the CDs or DVDs are
+available from a mirror (either a regular package mirror, or a mirror for
+security or volatile updates).
+
+</para></listitem>
+</orderedlist>
 
 </para><para>
 
-Note that even if you choose not to use a network mirror, some packages
-may still be downloaded from the Internet if there is a security or
-volatile update available for them and those services have been configured.
+Note that the last point means that, even if you choose not to use a network
+mirror, some packages may still be downloaded from the Internet if there is a
+security or volatile update available for them and those services have been
+configured.
 
 </para>
 </sect4>
