@@ -13,7 +13,11 @@ installation-guide (2008xxxx) UNRELEASED; urgency=low
   [ Robert Millan ]
   * Document how to start the installer from Windows.
 
- -- Frans Pop <fjp@debian.org>  Tue, 19 Feb 2008 15:22:07 +0100
+  [ Frans Pop ]
+  * Document installation using multiple CD/DVDs; update text about using a
+    mirror in line with that.
+
+ -- Frans Pop <fjp@debian.org>  Thu, 06 Mar 2008 05:10:30 +0100
 
 installation-guide (20080211) unstable; urgency=low
 
